# interstellar

./: .gitignore  Makefile  README.md  build.sh  cli.py  conftest.py  generate_qr.py  pyproject.toml  test_cli.py  test_tools.py  tools.py
.github/: templates
.github/scripts/: version_manager.py
.github/templates/: formula.rb.template
.github/workflows/: pr.yml  pypi.yml  release.yml  test.yml
Formula/: interstellar.rb
scripts/: build.sh  formula.rb.template  generate_qr.py  qr.py  smoke_test.py
src/interstellar/: cli.py  tools.py
tests/: smoke.py  test_cli.py  test_tools.py
