[project]
name = "kintsukuroi"
version = "0.1.0"
description = "A command-line tool for managing cryptocurrency mnemonics using BIP39 and SLIP39 standards"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "kintsukuroi contributors"}
]
keywords = ["cryptocurrency", "mnemonic", "bip39", "slip39", "shamir", "hdwallet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "hdwallet>=3.6.1",
    "mnemonic>=0.21",
    "requests>=2.32.5",
    "slip39>=14.0.2",
    "typer>=0.20.1",
]

[project.urls]
Homepage = "https://github.com/suchak/kintsukuroi"
Repository = "https://github.com/suchak/kintsukuroi"
Issues = "https://github.com/suchak/kintsukuroi/issues"

[dependency-groups]
dev = ["pytest", "pytest-xdist", "pytest-cov", "nuitka", "ordered-set"]

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.coverage.run]
source = ["."]
omit = ["test_*.py", "conftest.py", ".venv/*", "build/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true